refactor: modify env vars structure

--- a/.env.dbt.local.example
+++ b/.env.dbt.local.example
@@ -2,7 +2,7 @@
 DBT_USER=warehouse
 DBT_PASSWORD=warehouse
 DBT_HOST=localhost
-DBT_PORT=5444
+DBT_PORT=5460
 DBT_DB=warehouse
-DBT_SCHEMA=hernan
+DBT_SCHEMA=your_name_here
 DBT_DEBUG=false
