--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ optional = false
 apache-airflow = "2.6.3"
 apache-airflow-providers-dbt-cloud = "3.3.0"
 apache-airflow-providers-postgres = "5.5.1"
+apache-airflow-providers-cncf-kubernetes = "7.1.0"
+kubernetes = "23.6.0"
 
 [tool.poetry.group.dev]
 optional = true
