chore: adjust services env file

--- a/.env.services.local.example
+++ b/.env.services.local.example
@@ -21,13 +21,21 @@ AIRFLOW_POSTGRES_DB=airflow
 AIRFLOW_POSTGRES_PORT=${POSTGRES_PORT:-5432}
 AIRFLOW_POSTGRES_PORT_HOST=5450
 
+# Clients raw DB
+CLIENTS_POSTGRES_VERSION=${POSTGRES_VERSION:-14.7}
+CLIENTS_POSTGRES_USER=clients
+CLIENTS_POSTGRES_PASSWORD=clients
+CLIENTS_POSTGRES_DB=clients
+CLIENTS_POSTGRES_PORT=${POSTGRES_PORT:-5432}
+CLIENTS_POSTGRES_PORT_HOST=5460
+
 # Warehouse
 WAREHOUSE_POSTGRES_VERSION=${POSTGRES_VERSION:-14.7}
 WAREHOUSE_POSTGRES_USER=warehouse
 WAREHOUSE_POSTGRES_PASSWORD=warehouse
 WAREHOUSE_POSTGRES_DB=warehouse
 WAREHOUSE_POSTGRES_PORT=${POSTGRES_PORT:-5432}
-WAREHOUSE_POSTGRES_PORT_HOST=5460
+WAREHOUSE_POSTGRES_PORT_HOST=5470
 
 # Registry
 REGISTRY_VERSION=2
