--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
+dbt-postgres = "1.5.6"
 interrogate = "^1.5.0"
 mypy = "^1.6.0"
 nox = "^2023.4.22"
