fix(cicd): modify runner version

--- a/.github/workflows/pull-request.workflow.yaml
+++ b/.github/workflows/pull-request.workflow.yaml
@@ -5,7 +5,7 @@ on: push
 jobs:
   lint:
     name: Code quality check
-    runs-on: [ubuntu]
+    runs-on: ubuntu-24.04
     container: python:3.10.12
     services:
       postgres:
