fix(cicd): remove --install-hooks option

--- a/.github/workflows/pull-request.workflow.yaml
+++ b/.github/workflows/pull-request.workflow.yaml
@@ -17,12 +17,8 @@ jobs:
           POSTGRES_PASSWORD: warehouse
           POSTGRES_DB: warehouse
     steps:
-      # - name: Add SSH key
-      #   uses: webfactory/ssh-agent@v0.7.0
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Cache nox and deps
         id: cached-poetry-dependencies
