--- a/.github/workflows/pull-request.workflow.yaml
+++ b/.github/workflows/pull-request.workflow.yaml
@@ -35,7 +35,8 @@ jobs:
           apt-get update && apt-get install --no-install-recommends --no-install-suggests -y git
           pip install -U pip
           curl -sSL https://install.python-poetry.org | POETRY_VERSION=1.6.1 python3 -
-          echo "/root/.local/bin" >> ${GITHUB_PATH}
+          export PATH="/github/home/.local/bin:$PATH"
+          echo "/github/home/.local/bin" >> ${GITHUB_PATH}
           poetry config virtualenvs.in-project true
           poetry install --no-interaction --only dev
 
