--- a/.github/workflows/pull-request.workflow.yaml
+++ b/.github/workflows/pull-request.workflow.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Install development dependencies
         run: |
           apt-get update && apt-get install --no-install-recommends --no-install-suggests -y git
+          git init
           pip install -U pip
           curl -sSL https://install.python-poetry.org | POETRY_VERSION=1.6.1 python3 -
           export PATH="/github/home/.local/bin:$PATH"
