--- a/.github/workflows/pull-request.workflow.yaml
+++ b/.github/workflows/pull-request.workflow.yaml
@@ -34,6 +34,7 @@ jobs:
         run: |
           apt-get update && apt-get install --no-install-recommends --no-install-suggests -y git
           git init
+          git add .
           pip install -U pip
           curl -sSL https://install.python-poetry.org | POETRY_VERSION=1.6.1 python3 -
           export PATH="/github/home/.local/bin:$PATH"
