--- a/dbt/superside/packages.yml
+++ b/dbt/superside/packages.yml
@@ -8,5 +8,5 @@ packages:
   - package: dbt-labs/audit_helper
     version: 0.11.0
 
-  # - package: calogica/dbt_expectations
-  #   version: [">=0.9.0", "<0.10.0"]
+  - package: calogica/dbt_expectations
+    version: [">=0.10.0", "<0.11.0"]
