--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ types-pytz = "^2023.3.1.1"
 types-pyyaml = "^6.0.12.12"
 types-requests = "2.31"
 
+[tool.poetry.group.docs]
+optional = true
 
 [tool.poetry.group.docs.dependencies]
 diagrams = "^0.23.4"
